    task_sysinfo, S99fai-setup/FAISERVER: Replaced all calls to ifconfig
    by proper ip + shell magic calls (closes: #524347). Thanks to Luk
    Claes for the patch
  * fai-savelog: cd to the right place if LOGREMOTEDIR is set, thanks to
    Robin Powell for the patch (closes: #515704)
  * fai-mirror: remove use of $addpackages (closes: #537544)
  
 -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200

fai (3.2.20) unstable; urgency=low

  [ Thomas Lange ]
  * menu.lst: remove year
  * fai-cd: add option -B, that creates a boot-only CD (without containing
    the nfsroot, the partitial mirror and the config space)
  * conf/menu.lst.boot-only: new config file for the boot only CD
  * fai-cd.8: add option -B
  * fai-abort: add missing lsb header
  * control: remove duplicate fields
  * copyright: fix lintian warning
  
  [ Michael Tautschnig ]
  * fixed several hyphen-used-as-minus-sign errors in man pages
  * update to standards version 3.8.1, no changes needed
  * replaced dh_clean -k by dh_prep
  * use dh_lintian to install lintian overrides
  * added override for fai-nfsroot (diverts foreign /etc/init.d.rcS)
  * Build-Depends: debhelper (>= 7)
  * setup-storage/Sizes.pm: Clarified error message in cases where the user
    specified a partition is larger than the entire disk
  * setup-storage/Parser.pm, setup-storage/Sizes.pm, setup-storage/Volumes.pm:
    Added pseudo-disklabel gpt-bios to support GPT on systems with BIOS
    instead of EFI. Also installs an additional partition to store whatever
    doesn't fit into MBR.
  * setup-storage: bumped version to 1.0.5 (gpt-bios support)

 -- Thomas Lange <lange@debian.org>  Mon, 04 May 2009 10:42:25 +0200

fai (3.2.19) unstable; urgency=low

  * subroutines-linux: get-config-dir was never run if -z $monserver,
    which may be the case when no DHCP was done (dirinstall, softupdates,
    or install using fixed IP); problem was introduced by patch in r5338.
    (closes: #525096)
    adjust indentation
