@@ -19,6 +19,10 @@ fai (3.2.21) unstable; urgency=low
   * fai-savelog: cd to the right place if LOGREMOTEDIR is set, thanks to
     Robin Powell for the patch (closes: #515704)
   * fai-mirror: remove use of $addpackages (closes: #537544)
+
+  [ Michael Tautschnig ]
+  * setup-storage/Parser.pm: Set the boot flag on partition mounted at /, if
+    bootable is not explicitly set.
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
